--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     color: rgb(42, 122, 228);
   }
   
-  section {
+  .chamada {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -31,3 +31,23 @@ body {
   p {
     font-size: 20px;
   }
+  section {
+    background: rgb(184, 156, 213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  /* código omitido */
+  
+  section {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  /* código omitido */
+
+.categoria {
+  padding-left: 20px;
+  padding-right: 20px;
+}
