--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-    color: white;
-    background: black;
-    margin: 0px;
-    font-family: "Chakra Petch", sans-serif;
-  }
-  
+  color: white;
+  background: black;
+  margin: 0px;
+  font-family: "Chakra Petch", sans-serif;
+  margin-bottom: 100px;
+}
   header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
@@ -47,7 +47,16 @@ body {
   }
   /* código omitido */
 
-.categoria {
-  padding-left: 20px;
-  padding-right: 20px;
+  .categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+  }
+.categoria-videos img {
+  opacity: 0.5;
+  height: 200px;
+}
+.categoria-videos img:hover {
+  opacity: 1.0;
+  border: 1px solid green;
 }
